syntax = "proto3";

option java_package = "io.zulia.message";

enum MasterSlaveSettings {
    MASTER_ONLY = 0;
    SLAVE_ONLY = 1;
    MASTER_IF_AVAILABLE = 2;
}

message Node {
    string serverAddress = 1;
    uint32 servicePort = 2;
    uint32 restPort = 3;
    int64 heartbeat = 4;
    string version = 5;
}

message ResultDocument {
    string uniqueId = 1;
    string indexName = 2;
    bytes document = 3;
    bytes metadata = 4;
    int64 timestamp = 5;
}


message AssociatedDocument {
    string filename = 1;
    string documentUniqueId = 2;
    string indexName = 3;
    bytes document = 4;
    bytes metadata = 5;
    int64 timestamp = 6;
}

message ExternalDocument {
    string filename = 1;
    string documentUniqueId = 2;
    string indexName = 3;
    bytes registration = 4;
    int64 timestamp = 5;
}


message ShardCountResponse {
    uint32 shardNumber = 1;
    uint32 numberOfDocs = 2;
}


message Term {
    string value = 1;
    uint64 docFreq = 2;
    uint64 termFreq = 3;
    double score = 4;
}

message FuzzyTerm {
    string term = 1;
    uint32 editDistance = 2;
    uint32 prefixLength = 3; // default = 0
    bool noTranspositions = 4;
}


enum Similarity {
    BM25 = 0;
    TFIDF = 1;
    CONSTANT = 2;
    TF = 3;
}

message ShardCacheStats {
    CacheStats pinnedCache = 1;
    CacheStats generalCache = 2;
}

message CacheStats {
    uint64 estimatedSize = 1;
    uint64 hitCount = 2;
    uint64 missCount = 3;
    uint64 loadSuccessCount = 4;
    uint64 loadFailureCount = 5;
    uint64 totalLoadTime = 6;
    uint64 evictionCount = 7;
    uint64 evictionWeight = 8;
}

